[package]
name = "starry"
version = "2.0.0"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
repository = "https://github.com/Canop/starry"
description = "Current stars history tells only half the story"
keywords = ["github", "star", "story", "history", "graph"]
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.49"
argh = "0.1.3"
byo-graphql = "0.1.3"
chrono = { version="0.4", features=["serde"] }
cli-log = "0.1"
crossbeam = "0.8"
csv = "1.1"
directories-next = "2.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.20.4"   
ureq = { version = "2.4", features = ["json"] }

[patch.crates-io]
#byo-graphql = { path = "../byo-graphql" }
#termimad = { path = "../termimad" }
