[package]
name = "starry"
version = "2.0.2"
authors = ["dystroy <denys.seguret@gmail.com>"]
edition = "2018"
repository = "https://github.com/Canop/starry"
description = "Current stars history tells only half the story"
keywords = ["github", "star", "story", "history", "graph"]
license = "AGPL-3.0"
readme = "README.md"

[dependencies]
anyhow = "1.0.49"
argh = "0.1.9"
byo-graphql = "0.2.0"
chrono = { version="0.4", features=["serde"] }
cli-log = "2.0"
csv = "1.1"
directories-next = "2.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termimad = "0.27"   
tokio = { version = "1", features = ["full"] }

[patch.crates-io]
#byo-graphql = { path = "../byo-graphql" }
#termimad = { path = "../termimad" }
